[project]
name = "sowiz-agentic-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "ipynb>=0.5.1",
    "langchain>=1.2.3",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.1.3",
    "langchain-groq>=1.1.1",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.5",
    "langgraph-cli[inmem]>=0.4.11",
    "openai>=2.15.0",
    "pywin32>=311",
    "setuptools>=80.9.0",
    "streamlit>=1.52.2",
    "structlog>=25.5.0",
]
